# application-rs

./: Cargo.toml  README.md
examples/: simple.rs
pkg/: README.md  application_bg.wasm  package.json
src/: events.rs  lib.rs  render_loop.rs
src/app/: mod.rs  native.rs  stdw.rs  web.rs
