[package]
name = "application"
version = "0.1.0"
authors = ["Oussama <md.oussama@gmail.com>"]


 
[dependencies]
wasm-bindgen = { version = "0.2"  }

[dependencies.web-sys]
version = "0.3.2"
features = [ "Window", "Document","Node",   'Element',
  'HtmlElement', "HtmlBodyElement", "HtmlCanvasElement" , "Element" , "KeyboardEvent" , "MouseEvent","WebGl2RenderingContext"]
